<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Indrit Bashkimi.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceCaption"
            tools:text="Version 0.1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/app_description"
            android:textAppearance="?textAppearanceSubtitle1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/source_code"
            android:textAppearance="?textAppearanceSubtitle1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_header_help"
            android:textAppearance="@style/AboutCategory"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/send_feedback"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@null"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_feedback" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                android:text="@string/about_send_feedback"
                android:textAppearance="?textAppearanceBody1" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_header_legal"
            android:textAppearance="@style/AboutCategory"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@null"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_privacy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                android:text="@string/about_privacy_policy"
                android:textAppearance="?textAppearanceBody1" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/licenses"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:contentDescription="@null"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_licenses" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="56dp"
                android:paddingEnd="16dp"
                android:text="@string/licences_title"
                android:textAppearance="?textAppearanceBody1" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>